--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="setting_sensitivity_firm">Firm squeeze</string>
     <string name="setting_screen_off_title">Allow when screen is off</string>
     <string name="setting_screen_off_summary">Trigger action if proximity sensor is not covered</string>
+    <string name="setting_screen_off_blocked_summary">Blocked by current action</string>
     <string name="setting_action_title">On squeeze</string>
 
     <!-- Actions -->
